--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <div id = "heading">
 	<h1>Enoch Huang</h1>
 </div>
-<p>I am a second-year electrical engineering student at UCLA.</p>
+<p>I am a third-year electrical engineering student at UCLA.</p>
 </body>
 </html>
