--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 	<h1>Enoch Huang</h1>
 </div>
 <div id = "About Me">
-	<h2>About Me</>
+	<h2>About Me</h2>
 	<p>I am a third-year Electrical Engineering student at UCLA with experience in research, as well as FPGA programming, C++ and Python. I am looking to pivot my prior experiences into a role where I can drive forward technology that we rely on everyday.</p>
+</div>
+<div id = "Further info">
+	<h2>Further Information</h2>
+	<a href = "https://www.linkedin.com/in/enochihuang/">LinkedIn</a>
 </div>
 </body>
 </html>
