--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <div id = "heading">
 	<h1>Enoch Huang</h1>
 </div>
+<div id = "image">
+	<img src = "/Images/Portrait.jpg">
+</div>
 <div id = "About Me">
 	<h2>About Me</h2>
 	<p>I am a third-year Electrical Engineering student at UCLA with experience in research, as well as FPGA programming, C++ and Python. I am looking to pivot my prior experiences into a role where I can drive forward technology that we rely on everyday.</p>
