--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
 	<title>Enoch Huang</title>
 </head>
-<body>
+<body style = "background-color:lightblue;font-family:arial;text-align:center">
 <div id = "heading">
 	<h1>Enoch Huang</h1>
 </div>
 <div id = "image">
-	<img src = "/Images/Portrait.jpg">
+	<img src = "Images/Portrait.jpg" alt = "Professional Headshot of Enoch Huang" width = "25%">
 </div>
 <div id = "About Me">
 	<h2>About Me</h2>
-	<p>I am a third-year Electrical Engineering student at UCLA with experience in research, as well as FPGA programming, C++ and Python. I am looking to pivot my prior experiences into a role where I can drive forward technology that we rely on everyday.</p>
+	<p>I am a third-year Electrical Engineering student at <b>UCLA</b> with experience in research, as well as FPGA programming, C++ and Python. <br> I am looking to pivot my prior experiences into a role where I can drive forward technology that we rely on everyday.</p>
+	<blockquote style = "background-color:beige">For whoever calls upon the name of the Lord shall be saved. <br> - Romans 10:13<blockquote>
 </div>
 <div id = "Further info">
 	<h2>Further Information</h2>
