--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </div>
 <div id = "About Me">
 	<h2>About Me</h2>
-	<p>I am a third-year Electrical Engineering student at <b>UCLA</b> with experience in research, as well as FPGA programming, C++ and Python. <br> I am looking to pivot my prior experiences into a role where I can drive forward technology that we rely on everyday.</p>
+	<p>I am a fourth-year Electrical Engineering student at <b>UCLA</b> with experience in industry and research, as well as Circuit Analysis with PSpice, FPGA programming (SystemVerilog), Machine Learning, and Python. 
+		<br> I am looking to pivot my prior experiences into a role where I can drive forward technology that we rely on everyday.</p>
 	<blockquote style = "background-color:beige">For whoever calls upon the name of the Lord shall be saved. <br> - Romans 10:13<blockquote>
 </div>
 <div id = "Further info">
